--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -48,7 +48,7 @@
            <br>
            我们希望借由这个网站，能让大家找到且应征上高薪且优质的工作。
            <br>
-           凭借自己的努力和天份也会变 Winner
+           展示个人能力
          </p>
          <p class="lead">
            <%= link_to '马上应征', jobs_path, class: 'btn btn-danger' %>
@@ -63,8 +63,8 @@
          <div class="col-lg-5 col-sm-6">
            <hr class="section-heading-spacer">
            <div class="clearfix"></div>
-           <h2 class="section-heading">找工作一定要带手机</h2>
-           <p class="lead">因为没带手机就不能联络公司</p>
+           <h2 class="section-heading">据说</h2>
+           <p class="lead">有时候职场拼的不只是努力</p>
          </div>
          <div class="col-lg-5 col-lg-offset-2 col-sm-6">
            <%= image_tag 'pic-1.jpg', class: 'img-responsive' %>
@@ -79,8 +79,8 @@
          <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
            <hr class="section-heading-spacer">
            <div class="clearfix"></div>
-           <h2 class="section-heading">一定要把履历写好在投</h2>
-           <p class="lead">履历如果不会写就一定要多上网寻求帮助，例如  <a target="_blank" href="http://blog.niclin.tw">Nic 的 Blog</a>! 啦啦啦啦啦啦啦</p>
+           <h2 class="section-heading">舒适的工作环境</h2>
+           <p class="lead">坐累了起身走走，胸怀四方
          </div>
          <div class="col-lg-5 col-sm-pull-6  col-sm-6">
            <%= image_tag 'pic-2.jpg', class: 'img-responsive' %>
@@ -95,8 +95,8 @@
          <div class="col-lg-5 col-sm-6">
            <hr class="section-heading-spacer">
            <div class="clearfix"></div>
-           <h2 class="section-heading">这是可以乱改的字<br>动手试试看吧</h2>
-           <p class="lead">摩改大赛可以参考<a target="_blank" href="https://forum.qzy.camp/">论坛资源</a></p>
+           <h2 class="section-heading">致全栈的你</h2>
+           <p class="lead"></p>
          </div>
          <div class="col-lg-5 col-lg-offset-2 col-sm-6">
            <%= image_tag 'pic-3.jpg', class: 'img-responsive' %>
